div for heading and desc

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <!-- font-awesome-icon -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>To-Do List</title>
 </head>
 
@@ -56,66 +58,77 @@
           <div class="todo-conti">
             <!-- UL -->
             <ul class="todo-list">
+              
               <!-- create all this through JS -->
-              <!-- DIV -->
+
+              <!-- DIV TODO-LIST-->
               <div class="todo">
-                <div class="sidebar"></div>
+                <!-- DIV FOR HEADING AND SIDEBAR -->
+                <div class="sidebarAndheading">
+                  <!-- DIV SIDEBAR -->
+                  <div class="sidebar"></div>
+                  <!-- DIV FOR SUBJECT AND DESCRIPTION -->
+                  <div class="make-list">
+                    <!-- H2 FOR MEETING -->
+                    <h2 class="subject">Meeting</h2>
+                    <!-- H5 FOR DESCRIPTION -->
+                    <h5 class="description">Room 28</h5>
+                  </div>
+                </div>
+
+                <!-- DIV FOR BUTTONS -->
                 <div class="btns">
-                <div  class="btn-div1">
-                  <!-- <a><i class="fab fa-linkedin fa-sm"></i></a> -->
+                  <!-- DIV FOR BTN-1 -->
+                  <div class="btn-div1">
+                    <!-- a FOR BTN-1 -->
+                    <a style="font-size: 1rem;"><i class="fas fa-check"></i></a>
+                  </div>
+                  <!-- DIV FOR BTN-2 -->
+                  <div class="btn-div2">
+                    <!-- a FOR BTN-2 -->
+                    <a style="font-size: 1rem;"><i class="fas fa-trash"></i></a>
+                  </div>
                 </div>
-                <div class="btn-div2">
-                  <!-- <a><i class="fab fa-linkedin fa-sm"></i></a> -->
-                </div>
-                </div>
-                <!-- LI -->
-                <!-- <li class="list">
-                  <h2>hello</h2>
-                  2-BUTTONS
-                  <button class="completed">Hello</button>
-                  <button class="delete">Yes</button>
-                </li> -->
-
               </div>
 
               <div class="todo">
-                <div class="sidebar"></div>
-                                <div class="btns">
-                <div  class="btn-div1">
-                  <!-- <a><i class="fab fa-linkedin fa-sm"></i></a> -->
-                </div>
-                <div class="btn-div2">
-                  <!-- <a><i class="fab fa-linkedin fa-sm"></i></a> -->
-                </div>
-                </div>
-                <!-- LI -->
-                <!-- <li class="list">
-                                <h2>hello</h2>
-                                2-BUTTONS
-                                <button class="completed">Hello</button>
-                                <button class="delete">Yes</button>
-                              </li> -->
+                <div class="sidebarAndheading">
+                  <div class="sidebar"></div>
 
+                  <div class="make-list">
+                    <h2 class="subject">Meeting</h2>
+                    <h5 class="description">Room 28</h5>
+
+                  </div>
+                </div>
+                <div class="btns">
+                  <div class="btn-div1">
+                    <a style="font-size: 1rem;"><i class="fas fa-check"></i></a>
+                  </div>
+                  <div class="btn-div2">
+                    <a style="font-size: 1rem;"><i class="fas fa-trash"></i></a>
+                  </div>
+                </div>
               </div>
 
               <div class="todo">
-                <div class="sidebar"></div>
-                                <div class="btns">
-                <div  class="btn-div1">
-                  <!-- <a><i class="fab fa-linkedin fa-sm"></i></a> -->
-                </div>
-                <div class="btn-div2">
-                  <!-- <a><i class="fab fa-linkedin fa-sm"></i></a> -->
-                </div>
-                </div>
-                <!-- LI -->
-                <!-- <li class="list">
-                                <h2>hello</h2>
-                                2-BUTTONS
-                                <button class="completed">Hello</button>
-                                <button class="delete">Yes</button>
-                              </li> -->
+                <div class="sidebarAndheading">
+                  <div class="sidebar"></div>
 
+                  <div class="make-list">
+                    <h2 class="subject">Meeting</h2>
+                    <h5 class="description">Room 28</h5>
+
+                  </div>
+                </div>
+                <div class="btns">
+                  <div class="btn-div1">
+                    <a style="font-size: 1rem;"><i class="fas fa-check"></i></a>
+                  </div>
+                  <div class="btn-div2">
+                    <a style="font-size: 1rem;"><i class="fas fa-trash"></i></a>
+                  </div>
+                </div>
               </div>
 
             </ul>
