added time function

--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
           <!-- DATE -->
           <div class="full-date">
             <div class="dayYearMonth-Conti">
-              <div class="day">1</div>
+              <div class="day">01</div>
               <div class="yearAndMonths">
                 <div class="month">January</div>
-                <div class="year">2021</div>
+                <div class="year">2022</div>
               </div>
+            </div>
+            <div class="addNewList">
+              <a class="todo-btn" style="font-size: 3rem;"><i style="color: white;" class="fas fa-plus-circle"></i></a>
             </div>
             <div class="weekDay">Monday</div>
           </div>
@@ -58,7 +61,7 @@
           <div class="todo-conti">
             <!-- UL -->
             <ul class="todo-list">
-              
+
               <!-- create all this through JS -->
 
               <!-- DIV TODO-LIST-->
@@ -91,45 +94,6 @@
                 </div>
               </div>
 
-              <div class="todo">
-                <div class="sidebarAndheading">
-                  <div class="sidebar"></div>
-
-                  <div class="make-list">
-                    <h2 class="subject">Meeting</h2>
-                    <h5 class="description">Room 28</h5>
-
-                  </div>
-                </div>
-                <div class="btns">
-                  <div class="btn-div1">
-                    <a style="font-size: 1rem;"><i class="fas fa-check"></i></a>
-                  </div>
-                  <div class="btn-div2">
-                    <a style="font-size: 1rem;"><i class="fas fa-trash"></i></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="todo">
-                <div class="sidebarAndheading">
-                  <div class="sidebar"></div>
-
-                  <div class="make-list">
-                    <h2 class="subject">Meeting</h2>
-                    <h5 class="description">Room 28</h5>
-
-                  </div>
-                </div>
-                <div class="btns">
-                  <div class="btn-div1">
-                    <a style="font-size: 1rem;"><i class="fas fa-check"></i></a>
-                  </div>
-                  <div class="btn-div2">
-                    <a style="font-size: 1rem;"><i class="fas fa-trash"></i></a>
-                  </div>
-                </div>
-              </div>
 
             </ul>
           </div>
