--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
           <!-- DATE -->
           <div class="full-date">
+
             <div class="dayYearMonth-Conti">
               <div class="day">01</div>
               <div class="yearAndMonths">
@@ -33,14 +34,15 @@
                 <div class="year">2022</div>
               </div>
             </div>
+
             <div class="addNewList">
               <a class="todo-btn" style="font-size: 3rem;"><i style="color: white;" class="fas fa-plus-circle"></i></a>
             </div>
-            
+
             <div class="dayAndFilter">
               <div class="weekDay">Monday</div>
 
-              <div class="select custom-select">
+              <div class="custom-select">
                 <select name="todos" id="todoFilter">
                   <option value="all">All</option>
                   <option value="completed">Completed</option>
