--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
     </main>
   </div>
 
+    <!-- Footer -->
+    <footer>
+      <a href="https://www.linkedin.com/in/neeleshsng/" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-linkedin fa-lg"></i>
+      </a>
+      <a href="https://github.com/singhsduos/To-Do-List" target="_blank"
+        rel="noopener noreferrer">
+        <i class="fab fa-github fa-lg"></i>
+      </a>
+      <a href="https://twitter.com/singhs_duos" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-twitter fa-lg"></i>
+      </a>
+    </footer>
+
 
 
   <script src="app.js"></script>
